src/snapshots/noom__par_test__for.snap
---
source: src/par_test.rs
expression: "parse_snap(r\"\nfor (i in ipairs(list)) .{\n    break;\n};\n\")"
---
stmts:
  - For:
      it_var:
        span:
          line: 2
          col: 6
          fragment: i
      it_type: ~
      it:
        Expr:
          Call:
            - Ident:
                span:
                  line: 2
                  col: 11
                  fragment: ipairs
            - - Ident:
                  span:
                    line: 2
                    col: 18
                    fragment: list
      body:
        Block:
          stmts:
            - Break
          ret: ~
ret: ~

