src/snapshots/noom__par_test__func_let_3.snap
---
source: src/par_test.rs
expression: "parse_snap(r\"\nlet f: (number) -> number = .(a){ a * 2 };\n\")"
---
stmts:
  - Let:
      - span:
          line: 2
          col: 5
          fragment: f
      - Func:
          - - TypeIdent:
                - line: 2
                  col: 9
                  fragment: number
                - []
          - TypeIdent:
              - line: 2
                col: 20
                fragment: number
              - []
      - Func:
          - - - span:
                  line: 2
                  col: 31
                  fragment: a
              - ~
          - Block:
              stmts: []
              ret:
                BinaryOp:
                  - Ident:
                      span:
                        line: 2
                        col: 35
                        fragment: a
                  - line: 2
                    col: 37
                    fragment: "*"
                  - Number:
                      span:
                        line: 2
                        col: 39
                        fragment: "2"
          - ~
ret: ~

