src/snapshots/noom__par_test__func_let_4.snap
---
source: src/par_test.rs
expression: "parse_snap(r\"\nlet f = .(a: number) -> number: .{ a * 2 };\n\")"
---
stmts:
  - Let:
      - span:
          line: 2
          col: 5
          fragment: f
      - ~
      - Func:
          - - - span:
                  line: 2
                  col: 11
                  fragment: a
              - TypeIdent:
                  - line: 2
                    col: 14
                    fragment: number
                  - []
          - Block:
              stmts: []
              ret:
                BinaryOp:
                  - Ident:
                      span:
                        line: 2
                        col: 36
                        fragment: a
                  - line: 2
                    col: 38
                    fragment: "*"
                  - Number:
                      span:
                        line: 2
                        col: 40
                        fragment: "2"
          - TypeIdent:
              - line: 2
                col: 25
                fragment: number
              - []
ret: ~

