src/snapshots/noom__par_test__table.snap
---
source: src/par_test.rs
expression: "parse_snap(r\"\nlet foo = {\n    { abc = 'something', asd, 123 },\n    { [2] = 'something', 1, 123 },\n    { [asd] = 'other', 123, 544 }\n};\n\")"
---
stmts:
  - Let:
      - span:
          line: 2
          col: 5
          fragment: foo
      - ~
      - Table:
          span:
            line: 2
            col: 11
            fragment: "{\n    { abc = 'something', asd, 123 },\n    { [2] = 'something', 1, 123 },\n    { [asd] = 'other', 123, 544 }\n}"
          entries:
            - - ~
              - Table:
                  span:
                    line: 3
                    col: 5
                    fragment: "{ abc = 'something', asd, 123 }"
                  entries:
                    - - Ident:
                          span:
                            line: 3
                            col: 7
                            fragment: abc
                      - String:
                          - line: 3
                            col: 14
                            fragment: something
                          - Single
                    - - ~
                      - Ident:
                          span:
                            line: 3
                            col: 26
                            fragment: asd
                    - - ~
                      - Number:
                          span:
                            line: 3
                            col: 31
                            fragment: "123"
            - - ~
              - Table:
                  span:
                    line: 4
                    col: 5
                    fragment: "{ [2] = 'something', 1, 123 }"
                  entries:
                    - - Expr:
                          Number:
                            span:
                              line: 4
                              col: 8
                              fragment: "2"
                      - String:
                          - line: 4
                            col: 14
                            fragment: something
                          - Single
                    - - ~
                      - Number:
                          span:
                            line: 4
                            col: 26
                            fragment: "1"
                    - - ~
                      - Number:
                          span:
                            line: 4
                            col: 29
                            fragment: "123"
            - - ~
              - Table:
                  span:
                    line: 5
                    col: 5
                    fragment: "{ [asd] = 'other', 123, 544 }"
                  entries:
                    - - Expr:
                          Ident:
                            span:
                              line: 5
                              col: 8
                              fragment: asd
                      - String:
                          - line: 5
                            col: 16
                            fragment: other
                          - Single
                    - - ~
                      - Number:
                          span:
                            line: 5
                            col: 24
                            fragment: "123"
                    - - ~
                      - Number:
                          span:
                            line: 5
                            col: 29
                            fragment: "544"
ret: ~

